add server logs